--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 28.05.2022 14:59:50</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 29.05.2022 07:15:45</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Sobota, 28. 05. 2022</h5>
+<h5>Neděle, 29. 05. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Vývar s masem a nudlemi</strong>
@@ -50,7 +50,7 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Sobota 28.5.2022</div>
+<div class="nadpis">Neděle 29.5.2022</div>
 <ul>
 <li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
@@ -66,96 +66,18 @@
 <h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kukuřičný krém s krutony</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Kulajda s houbami</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Gulášová</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažené kuřecí a vepřové řízky, bramborová kaše s máslem, citron</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na roštu po mexicku, grilované brambory, feferonkový dip</td><td class="menuPrice">142,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 180g Filet z lososa (exkluzivní kvalita) s holanskou omáčkou, hráškové pyré, grilovaná karotka</td><td class="menuPrice">174,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Vinná klobása na grilu, bramborová kaše s máslem a šnytlíkem, kyselá okurka</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Řezy z pravé hovězí svíčkové na zeleném pepři, sázené vejce na šunce, bramborové hranolky</td><td class="menuPrice">264,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstovinový salát s čerstvou zeleninou a kousky kuřecích prsou, promíchaný majonézovým dresinkem, vejce Benedikt</td><td class="menuPrice">143,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažené holanské řízky, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí pečeně na slanině, dušená jasmínová rýže</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborové halušky s uzeným masem a bílím zelím, škvarky na cibuli</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: Medailonky z vepřové panenky v sýrovém těstíčku, grilovaná brokolice, zakysaná smetana</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Grilované kuřecí prso s brusinkovým chutney a pečenými batáty, bramborové krokety s tymiánem, omáčka s portského vína</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">180g</td><td class="menuName">Filet z divokého lososa (exkluzivní kvalita) na roštu, vařené brambory s máslem a šnitlíkem, malý salát (tomaty a zelenými olivami, promíchaný olivovým olejem)</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny fusilli  Aglio- olio peperoncino, filírované kuřecí plátky, strouhaný parmazán</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený sýr a 150g Steak z vepřové pečeně za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Steak z vepřové pečeně se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">Staropramen 0,5L 11° se slevou 11,-Kč na půllitr pro naše stálé sledující po celý den neomezeně (instacena platí celý květen)</td><td class="menuPrice">32,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Instagram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený sýr a 150g Steak z vepřové pečeně za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Steak z vepřové pečeně se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">Staropramen 0,5L 11° se slevou 11,-Kč na půllitr pro naše stálé sledující po celý den neomezeně (instacena platí celý květen)</td><td class="menuPrice">32,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Naše dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">55,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° - Ležák</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 10° - Výčepní</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Muflon 11° - Šenkýř ALE</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Cool nealko grep </td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Naše dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">65,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° - Ležák</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 10° - Výčepní</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Muflon 11° - Šenkýř ALE</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Cool nealko grep </td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
 <table>
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
-<tr>
-<td>
-<table class="dm">
-<tbody>
-<tr>
-<td class="amount">100 g</td>
-<td class="title">Tvarůžkový tatarák, červená cibulka, feferonka, pažitka,
-		dip ze zakysané smetany a dijonské hořčice, pečivo 1a,3,7,10</td>
-<td class="pricem">149 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">Gulášová polévka z hovězího krku s čerstvou majoránkou
-a naší houskou 1a,7</td>
-<td class="pricem">89 Kč</td>
-</tr>
-<tr>
-<td class="amount">180 g</td>
-<td class="title">Grilované karbanátky s opečenými plátky brambor
-		a variací studených omáček 1a,3,7,10</td>
-<td class="pricem">159 Kč</td>
-</tr>
-<tr>
-<td class="amount">1 ks</td>
-<td class="title">Hot Dog s chilli párkem, bbq majonézou, chedarem, rukolou
-		a smaženou cibulkou, salát z kysaného zelí 1a,3,7,10,12</td>
-<td class="pricem">129 Kč</td>
-</tr>
-<tr>
-<td class="amount">400 g</td>
-<td class="title">Pečené vykostěné vepřové koleno na černém pivu s omáčkou
-		z paprik, rajčat a cibule, křen, hořčice, pečivo 1abc,10</td>
-<td class="pricem">219 Kč</td>
-</tr>
-<tr>
-<td class="amount">150 g</td>
-<td class="title">Smažené jalapeňos plněné nivou &amp; cibulové kroužky v pivním
-		těstíčku se zakysanou smetanou a trhaným salátem 1ac,3,7</td>
-<td class="pricem">119 Kč</td>
-</tr>
-</tbody>
-</table>
-</td>
-</tr>
-<tr>
-<td>
-<table class="dm">
-<tbody>
-<tr>
-<td class="title">Gin Tonic Okurkový<br/>
-gin / tonic / čerstvá okurka / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic Malina<br/>
-malinový gin / tonic  / lesní plody / ovoce / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic Zázvorový<br/>
-gin / zázvorový tonik / citron / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic Targa Florio<br/>
-gin / citronová limonáda / citron / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-</tbody>
-</table>
-</td>
-</tr>
 </table>
 <table>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
