--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 01.06.2022 15:24:57</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 02.06.2022 07:26:52</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Středa, 01. 06. 2022</h5>
+<h5>Čtvrtek, 02. 06. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Květáková</strong>
@@ -50,64 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Středa 1.6.2022</div>
+<div class="nadpis">Čtvrtek 2.6.2022</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Mechový dort s jahodami </div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Medovník</div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Kuskusový salát, paprika, rajče, mozzarella, olivy</div>
-<div class="cena">79 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Ovocný salát</div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Bavorská bageta s mozzarellou</div>
-<div class="cena">79 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Bavorská bageta s kuřecím masem a dijonskou hořčicí</div>
-<div class="cena">89 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Kulajda v menu <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Kulajda samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Pečené kuřecí stehno na máslové zelenině, bramborová kaše, míchaný salátek <em title="Mléko">7</em><em title="Celer">9</em><em title="Hořčice">10</em></div>
-<div class="cena">159 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Masové kuličky v marinara omáčce, těstoviny penne, parmazán, oregano <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">155 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Cizrnový falafel, lilkový baba ganoush, salát z černé čočky <em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">155 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -118,10 +63,13 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hrachová polévka s klobásou a krutony</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Gulášová</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Kuřecí stripsy obalené v cornflakes, bramborová kaše s máslem, citrón</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dětský den: 2ks Naše palačinky plněné marmeládou s lesním ovocem a vanilkovou zmrzlinou, šlehačka </td><td class="menuPrice">79,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Rajská omáčka s hovězím masem, kynuté houskové knedlíky</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Španělský vepřový ptáček, dušená jasmínová rýže</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, špenát</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Buřtguláš s opečeným chlebem na tálu, feferonka, cibule</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 180g Filet z divokého lososa (exkluzivní kvalita) na roštu, batátovo-mrkvové pyré, grilovaná zelenina, citrón</td><td class="menuPrice">169,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linquine s jemnou sýrovou omáčkou, kousky kuřecích prsou, rukola</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Masové sekané vepřové biftečky na jemné pepřové omáčce, restované špecle</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny promíchaný česnekovým dresinkem, filírovaná vepřová panenka, vařené vejce</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený sýr a 150g Steak z vepřové pečeně za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Steak z vepřové pečeně se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Pivovar MUFLON - Šenkýř ALE 0,4L se slevou 11,-Kč na pivu pro naše stálé sledující po celý den neomezeně (instacena platí celý červen)</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dnes na čepu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° - Ležák</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 10° - Výčepní</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Staropramen 12° - Extra chmelená</td><td class="menuPrice">44,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Muflon 11° - Šenkýř ALE</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Cool nealko grep </td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Malinovka </td><td class="menuPrice">27,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Katův vepřový šleh se zeleninou a feferonkou, hranolky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Koprová omáčka s hovězím masem a vařeným vejcem, kynuté houskové knedlíky</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čočka na kyselo, moravské uzené s vepřovou klobásou na grilu, sázené vejce, škvarky na cibuli, kyselá okurka</td><td class="menuPrice">142,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Drůbeží játra na roštu s opečenou klobásou, pečené brambory s kmínem, mexický dip</td><td class="menuPrice">142,-</td></tr><tr><td class="menuWeight">Low carb:</td><td class="menuName">Nízkosacharidová dieta: 200g Kuřecí prsa na roštu s plátky rajčat gratinovaný sýrem, celerové hranolky, zakysaná smetana</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Srbské kuřecí rizoto, strouhaný sýr, kyselá okurka</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené žampiony, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřová panenka v listovém těstíčku s listovým špenátem, bramborová kaše s máslem a grilovanou karotkou</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný majonézovým dresinkem, hermelín v těstíčku</td><td class="menuPrice">143,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený sýr a 150g Steak z vepřové pečeně za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z vepřové pečeně se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pivovar MUFLON - Šenkýř ALE 0,4L se slevou 11,-Kč na pivu pro naše stálé sledující po celý den neomezeně (instacena platí celý červen)</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° - Ležák</td><td class="menuPrice">41,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 10° - Výčepní</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Staropramen 12° - Extra chmelená</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Muflon 11° - Šenkýř ALE</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Cool nealko grep </td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -129,74 +77,7 @@
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
-<table class="dm">
-<tbody>
-<tr>
-<td class="amount">100 g</td>
-<td class="title">Tvarůžkový tatarák, červená cibulka, feferonka, pažitka,
-		dip ze zakysané smetany a dijonské hořčice, pečivo 1a,3,7,10</td>
-<td class="pricem">149 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">Gulášová polévka z hovězího krku s čerstvou majoránkou
-a naší houskou 1a,7</td>
-<td class="pricem">89 Kč</td>
-</tr>
-<tr>
-<td class="amount">180 g</td>
-<td class="title">Grilované karbanátky s opečenými plátky brambor
-		a variací studených omáček 1a,3,7,10</td>
-<td class="pricem">159 Kč</td>
-</tr>
-<tr>
-<td class="amount">1 ks</td>
-<td class="title">Hot Dog s chilli párkem, bbq majonézou, chedarem, rukolou
-		a smaženou cibulkou, salát z kysaného zelí 1a,3,7,10,12</td>
-<td class="pricem">129 Kč</td>
-</tr>
-<tr>
-<td class="amount">400 g</td>
-<td class="title">Pečené vykostěné vepřové koleno na černém pivu s omáčkou
-		z paprik, rajčat a cibule, křen, hořčice, pečivo 1abc,10</td>
-<td class="pricem">219 Kč</td>
-</tr>
-<tr>
-<td class="amount">150 g</td>
-<td class="title">Smažené jalapeňos plněné nivou &amp; cibulové kroužky v pivním
-		těstíčku se zakysanou smetanou a trhaným salátem 1ac,3,7</td>
-<td class="pricem">119 Kč</td>
-</tr>
-</tbody>
-</table>
-</td>
-</tr>
-<tr>
-<td>
-<table class="dm">
-<tbody>
-<tr>
-<td class="title">Gin Tonic Okurkový<br/>
-gin / tonic / čerstvá okurka / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic Malina<br/>
-malinový gin / tonic  / lesní plody / ovoce / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic Zázvorový<br/>
-gin / zázvorový tonik / citron / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic Targa Florio<br/>
-gin / citronová limonáda / citron / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-</tbody>
-</table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Uzená selská s kroupami a houbami 1ac</td><td class="pricem">39 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Hovězí kostky na česneku se špenátem a našimi bramborovými knedlíky 1a,3,7</td><td class="pricem">145 Kč</td><tr><tr><td class="amount">1/4</td><td class="title">Pečené kuřecí stehno alá bažant s jasmínovou rýží 1a,7</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">180g</td><td class="title">Telecí játra na roštu s hranolky, salátem z polníčku a majonézou s pečeným česnekem 1a,3,7,10</td><td class="pricem">149 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
